Tweeks to used MarkUp and Style files and started README

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
             <nav>
                 <ul>
                     <li>Contacts</li>
-                    <li>Category</li>
-                    <li>Login</li>
+                    <li><a href="https://www.youtube.com/watch?v=zNXQS2DfckU" target="_blank">Tutorial</a></li>
+                    <li><a href="https://www.youtube.com/@lundeveloper" target="_blank">Login</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <div class="section" id="banner">
         <div class="content-fit">
-            <div class="title" data-before="WEBSITEDESIGN">3D ANIMATION</div>
+            <div class="title" data-before="GSAP">Three JS</div>
         </div>
         <img src="img/flower.png" class="decorate" alt="" style="width: 50vw; bottom: 0; right: 0;">
         <img src="img/leaf.png" class="decorate" alt="" style="width: 30vw; bottom: 0; left: 0;">
