Adding screenshots and functionality for the scene

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Three JS + GSAP</title>
     <link rel="stylesheet" href="style.css">
+    <script type="module" src="app.js"></script>
 </head>
 
 <body>
@@ -90,5 +91,4 @@
 
 
 <div id="container3D"></div>
-<script type="module" src="app.js"></script>
 </html>
