--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <div class="content-fit">
             <div class="title" data-before="GSAP">Three JS</div>
         </div>
-        <img src="img/flower.png" class="decorate" alt="" style="width: 50vw; bottom: 0; right: 0;">
-        <img src="img/leaf.png" class="decorate" alt="" style="width: 30vw; bottom: 0; left: 0;">
+        <img src="img/flower-2.png" class="decorate" alt="" style="width: 50vw; bottom: 0; right: 0;">
+        <img src="img/leaf-2.png" class="decorate" alt="" style="width: 30vw; bottom: 0; left: 0;">
     </div>
     <div class="section" id="intro">
         <div class="content-fit">
